<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_close_black_24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="-10dp"
            android:layout_marginBottom="20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:text="@string/request_post"/>
    </LinearLayout>




    <!-- <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:background="@color/colorPrimary">

         <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_centerInParent="true"
             android:background="@drawable/ic_success" />

     </RelativeLayout>-->

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:singleLine="true"
        android:clickable="false"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:singleLine="true"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:textColor="#4B4B4B"
        android:text="@string/reason"/>

    <RadioGroup
        android:id="@+id/reason_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

    </RadioGroup>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/description_text"
        android:singleLine="true"
        android:layout_margin="10dp"/>

       <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_background"
            android:text="@string/save"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>