<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/close_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/ic_close_black_24dp"
                android:layout_gravity="right"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_marginTop="-25dp"
                android:textColor="#ffffff"
                android:text="@string/payment_mode"/>

        </LinearLayout>

       <!-- <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" >


            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/edit_text_color"
                android:text="@string/payable"/>

            <TextView
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:textColor="@color/edit_text_color"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <RadioButton
                android:id="@+id/radio_stripe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/card_payment"/>

            <RadioButton
                android:id="@+id/bank_transfer_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/bank_transfer"/>
        </RadioGroup>


        <LinearLayout
            android:id="@+id/bank_transfer_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:visibility="gone"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/edit_text_color"
                    android:text="@string/upload_proof"/>

                <ImageView
                    android:id="@+id/upload_receipt"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_upload"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:visibility="gone"
                    android:src="@drawable/ic_upload"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/edit_text_color"
                android:text="@string/bank_detail"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/edit_text_color"
                    android:layout_height="wrap_content"
                    android:text="@string/account"/>

                <TextView
                    android:id="@+id/account_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/edit_text_color"
                    android:layout_height="wrap_content"
                    android:text="@string/account_no"/>

                <TextView
                    android:id="@+id/account_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/edit_text_color"
                    android:layout_height="wrap_content"
                    android:text="@string/iban_no"/>

                <TextView
                    android:id="@+id/iban_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/edit_text_color"
                    android:layout_height="wrap_content"
                    android:text="@string/short_name"/>

                <TextView
                    android:id="@+id/short_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/edit_text_color"
                    android:layout_height="wrap_content"
                    android:text="@string/description_text"/>

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/edit_text_color"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_proceed"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/button_background"
            android:padding="12dp"
            android:text="@string/pay_now"
            android:layout_marginRight="10dp"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />

    </LinearLayout>

</layout>