<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:orientation="vertical">


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:textColorHint="@color/text_color_hint">

                        <EditText
                            android:id="@+id/input_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusableInTouchMode="true"
                            android:hint="@string/name"
                            android:textColor="@color/edit_text_color"
                            android:maxLength="15"
                            android:singleLine="true"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/text_color_hint">

                        <EditText
                            android:id="@+id/input_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusableInTouchMode="true"
                            android:hint="@string/email_address"
                            android:textColor="@color/edit_text_color"
                            android:inputType="textEmailAddress"
                            android:maxLength="15"
                            android:singleLine="true"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/text_color_hint">

                        <EditText
                            android:id="@+id/input_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusableInTouchMode="true"
                            android:hint="@string/phone"
                            android:textColor="@color/edit_text_color"
                            android:inputType="textEmailAddress"
                            android:maxLength="15"
                            android:singleLine="true"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/text_color_hint">

                        <EditText
                            android:id="@+id/input_dob"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusableInTouchMode="true"
                            android:hint="@string/dob"
                            android:textColor="@color/edit_text_color"
                            android:inputType="textEmailAddress"
                            android:maxLength="15"
                            android:singleLine="true"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/text_color_hint">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusableInTouchMode="true"
                            android:hint="@string/gender"
                            android:textColor="@color/edit_text_color"
                            android:inputType="textEmailAddress"
                            android:maxLength="15"
                            android:singleLine="true"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_next"
                    android:layout_width="fill_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/button_background"
                    android:padding="12dp"
                    android:drawableRight="@drawable/right_arrow"
                    android:text="@string/next"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white" />


                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="fill_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/button_facebook_back"
                    android:padding="12dp"
                    android:text="@string/signin"
                    android:textAllCaps="true"
                    android:drawableLeft="@drawable/ic_facebook"
                    android:textColor="@android:color/holo_blue_dark" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/already_sign"/>

            </LinearLayout>

    </LinearLayout>
</layout>